--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "predev": "npm run typegen",
+    "prebuild": "npm run typegen",
+    "typegen": "sanity schema extract --path=./sanity/extract.json && sanity typegen generate"
   },
   "dependencies": {
     "@mdx-js/loader": "^3.1.0",
@@ -14,6 +17,8 @@
     "@next/mdx": "^15.0.3",
     "@radix-ui/react-dropdown-menu": "^2.1.2",
     "@radix-ui/react-slot": "^1.1.0",
+    "@sanity/image-url": "^1.1.0",
+    "@sanity/vision": "^3.64.3",
     "@tailwindcss/typography": "^0.5.15",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
@@ -21,12 +26,16 @@
     "lucide-react": "^0.460.0",
     "next": "15.0.3",
     "next-mdx-remote": "^0.5.1",
+    "next-sanity": "^9.8.16",
     "react": "19.0.0-rc-66855b96-20241106",
     "react-dom": "19.0.0-rc-66855b96-20241106",
     "react-markdown": "^9.0.1",
+    "sanity": "^3.64.3",
     "shadcn": "^2.1.6",
+    "styled-components": "^6.1.13",
     "tailwind-merge": "^2.5.4",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "use-sidecar": "^1.1.2"
   },
   "devDependencies": {
     "@types/node": "^20",
